[tool.poetry]
name = "baiduwenkudownloader"
version = "0.1.0"
description = ""
authors = ["Jay <lostjaychi@gmail.com>"]
readme = "README.md"
packages = [
    { include = "CrawlerUtils" },
    { include = "baiduwenkudownloader" }
]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
lxml = "^5.3.0"
curl-cffi = "^0.11.3"
tenacity = "^9.1.2"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.14"
uvicorn = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
